--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     <section class="hero">
         <div class="container">
             <h1 data-aos="zoom-in">Taha Usman</h1>
-            <p data-aos="fade-up" data-aos-delay="300">Young Web Developer | Student</p>
+            <p data-aos="fade-up" data-aos-delay="300">Young Web Developer | Student</p><br>
         </div>
     </section>
-
     <!-- About Section -->
     <section id="about">
         <div class="container">
@@ -40,7 +39,6 @@
             </div>
         </div>
     </section>
-
     <!-- Projects Section -->
     <section id="projects">
         <div class="container">
@@ -91,7 +89,6 @@
             </div>
         </div>
     </section>
-
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
@@ -103,14 +100,13 @@
                 <a href="https://www.instagram.com/t.usman2010" class="social-link" data-aos="zoom-in" data-aos-delay="200">
                     <img src="https://img.icons8.com/ios-glyphs/30/000000/instagram-new.png" alt="Email">
                 </a>
-                <a href="https://t-usman2010.github.io/Java-Class/" class="social-link" data-aos="zoom-in" data-aos-delay="200">
-                    <img src="Website Icon.png" alt="Email" class="image-no-bg">
+                <a href="contract.html" class="social-link" data-aos="zoom-in" data-aos-delay="200">
+                    <img src="contract.png" alt="Email" class="image-no-bg">
                 </a>
             </div>
         </div>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="script.js"></script>
-       
 </body>
 </html>
